--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "project1",
+    "name": "project1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://myusername.github.io/project1",
+  "homepage": "https://madhusmita-behera.github.io/project1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -b master -d build ",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
